fixed contrast, scale, alignment and white space

--- a/ex01/Design-Challenge-2/index.css
+++ b/ex01/Design-Challenge-2/index.css
@@ -49,8 +49,7 @@ span {
 }
 
 .card {
-    background: #2C3031;
-    /* color: white; */
+    background: hsl(394, 10%, 18%);
     padding: 1em;
     margin: 2em;
 }
